Fix main services read more link alignment

--- a/resources/stylesheets/components/_main-services.scss
+++ b/resources/stylesheets/components/_main-services.scss
@@ -183,3 +183,14 @@ $column-width: 10em;
     }
   }
 }
+
+.read-more--main-services a {
+  float: none;
+  width: max-content;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: my.breakpoint('tablet__portrait')) {
+    float: right;
+  }
+}
